# sv-test-scripts

./: .dockerignore  .env.template  Dockerfile  README.md  config.py  docker-compose.yml  keycloak_manager.py  makefile  manage_secrets.py  protect_secrets.py  pyproject.toml  requirements.txt  sv_oidc_auth.py  sv_secret_manager.py  sv_secret_submitter.py  sv_test_logger.py  utils.py
